# ffix

./: pyproject.toml
src/ffix/: cli.py
