[project]
name = "ffix"
version = "0.0.1"
description = ""
readme = "README.md"
authors = [
    { name = "aillt", email = "aillt2@proton.me" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
ffix = "ffix:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
