[project]
name = "ffix"
version = "0.0.1"
description = ""
readme = "README.md"
authors = [
    { name = "aillt", email = "aillt2@proton.me" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
ffix = "ffix.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "isort>=6.0.1",
    "ruff>=0.11.6",
]
