[project]
name = "ffix"
version = "0.0.1"
description = ""
readme = "README.md"
authors = [
    { name = "aillt", email = "aillt2@proton.me" }
]
requires-python = ">=3.12"
dependencies = [
    "rich>=14.0.0",
    "typer>=0.15.2",
]

[project.scripts]
ffix = "ffix.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "isort>=6.0.1",
    "ruff>=0.11.6",
]
